// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test with clickable logo 1`] = `
<div
  className="Pinpoint Copyright "
>
  <span
    aria-label="Logo"
    className="Pinpoint Internal Link clickable Pinpoint Logo sm "
    onClick={[Function]}
  >
    <img
      alt=""
      className="Pinpoint Image image blurhash"
      decoding="async"
      loading="eager"
      src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
    />
  </span>
  <span
    className="text"
  >
    Copyright © 2021 by Pinpoint Software, Inc.
  </span>
</div>
`;

exports[`Test with custom className 1`] = `
<div
  className="Pinpoint Copyright test-custom"
>
  <span
    aria-label="Logo"
    className="Pinpoint Internal Link  Pinpoint Logo sm "
  >
    <img
      alt=""
      className="Pinpoint Image image blurhash"
      decoding="async"
      loading="eager"
      src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
    />
  </span>
  <span
    className="text"
  >
    Copyright © 2021 by Pinpoint Software, Inc.
  </span>
</div>
`;

exports[`Test with linked logo 1`] = `
<div
  className="Pinpoint Copyright "
>
  <a
    aria-label="Logo"
    className="Pinpoint Internal Link Pinpoint Logo sm "
    href="https://pinpoint.com"
    title="Logo"
  >
    <img
      alt=""
      className="Pinpoint Image image "
      decoding="async"
      height={320}
      loading="lazy"
      src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
      width={320}
    />
  </a>
  <span
    className="text"
  >
    Copyright © 2021 by Pinpoint Software, Inc.
  </span>
</div>
`;

exports[`Test with logo 1`] = `
<div
  className="Pinpoint Copyright "
>
  <span
    aria-label="Logo"
    className="Pinpoint Internal Link  Pinpoint Logo sm "
  >
    <img
      alt=""
      className="Pinpoint Image image blurhash"
      decoding="async"
      loading="eager"
      src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
    />
  </span>
  <span
    className="text"
  >
    Copyright © 2021 by Pinpoint Software, Inc.
  </span>
</div>
`;

exports[`Test without logo 1`] = `
<div
  className="Pinpoint Copyright "
>
  <span
    className="text"
  >
    Copyright © 2021 by Pinpoint Software, Inc.
  </span>
</div>
`;
